Sat Nov  6 03:57:20 MET 1999  Sven Neumann <sven@gimp.org>

	* app/gdisplay_color_ui.c: fixed a crash on Cancel that occured 
	due to bad list handling

	* app/module_db.c: indentation madness, no changes

	* app/nav_window.c: set the zoom label and slider first, then 
	update the preview. Gives better user feedback. This is now what 
	bugreport #3354 suggest, but it comes close.

	* plug-ins/common/plugindetails.c: tried to fix the strange resizing
	of the dialog. Should fix bug #3352.

Fri Nov  5 15:32:15 MET 1999  Sven Neumann <sven@gimp.org>

	* app/edit_selection.c: when moving layers/masks freeze the undo
	after the first move to avoid that each and every small movements
	puts an undo on the stack. Significantly speeds up layer moves 
	and especially the undo of a layer move.

	* app/gdisplay.h: correct rounding errors

	* app/gimpimage.c: correctly display floating selections in the
	composite_preview instead of ignoring them

	* app/channels_dialog.c
	* app/layers_dialog.c
	* app/lc_dialog.c: s/gtk_widget_draw/gtk_widget_queue_draw/

Thu Nov  4 22:06:24 GMT 1999 Andy Thomas <alt@gimp.org>

	* app/gradient_select_cmds.c
	* tools/pdbgen/pdb/gradient_select.pdb

	Fixed crash when main gradient dialog is opened and 
	one lauched via the PDB interface (ie scriptfu) is also open.

Thu Nov  4 20:46:25 MET 1999  Sven Neumann <sven.gimp.org>
	
	* app/channel.c: get rid of compiler warnings

	* app/histogram_tool.c
	* app/histogram_tool.h: added a gradient below the histogram so 
	it looks more like the curves and levels tool

	* app/gimpbrushpipe.c
	* libgimp/parasiteio.c
	* libgimp/parasiteio.h: plugged another mem-leak. At least 
	The GIMP now starts without leaking memory...

Thu Nov  4 00:59:01 MET 1999  Sven Neumann <sven.gimp.org>

	* app/file_new_dialog.c
	* app/gimpbrush.c
	* app/gimpbrushpipe.c
	* app/gimprc.c
	* app/patterns.c
	* app/patterns.h: plugged mem-leaks

Wed Nov  3 22:36:21 GMT 1999 Austin Donnelly  <austin@gimp.org>
