@@ -312,15 +312,15 @@ HELP
     %invoke = ( code => 'drawable_offsets (drawable, &offset_x, &offset_y);' );
 }
 
-sub drawable_layer {
+sub drawable_is_layer {
     &drawable_is_proc('layer');
 }
 
-sub drawable_layer_mask {
+sub drawable_is_layer_mask {
     &drawable_is_proc('layer mask');
 }
 
-sub drawable_channel {
+sub drawable_is_channel {
     &drawable_is_proc('channel');
 }
 
@@ -443,7 +443,7 @@ sub drawable_thumbnail {
 
     $help = <<'HELP';
 This function gets data from which a thumbnail of a drawable preview can be 
-created. Maximum x or y dimension is 128 pixels. The pixles are returned 
+created. Maximum x or y dimension is 128 pixels. The pixels are returned 
 in the RGB[A] format. The bpp return value gives the number of bytes in 
 the image. The alpha channel also returned if the drawable has one.
 HELP
@@ -512,8 +512,8 @@ CODE
 	    drawable_mask_bounds drawable_image drawable_type
 	    drawable_has_alpha drawable_type_with_alpha drawable_is_rgb
 	    drawable_is_gray drawable_is_indexed drawable_bytes drawable_width
-	    drawable_height drawable_offsets drawable_layer
-	    drawable_layer_mask drawable_channel drawable_get_pixel
+	    drawable_height drawable_offsets drawable_is_layer
+	    drawable_is_layer_mask drawable_is_channel drawable_get_pixel
 	    drawable_set_pixel drawable_set_image drawable_thumbnail);
 %exports = (app => [@procs], lib => [@procs]);
 
